--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 <head>
   <meta charset="utf-8">
-  <title>❥Hedieh's Personal Site</title>
+  <title>Hedieh Najafi</title>
 </head>
 
 <body>
@@ -11,10 +11,10 @@
   <tr>
     <td><img src="HediehNajafi.png" alt="profile picture"></td>
     <td><h1>Hedieh Najafi</h1>
-    <p> <em>Researcher, <strong>Online Learning Strategies</strong></em></p></td>
+    <p> <em>Researcher, <strong>Online Learning Strategies, University of Toronto</strong></em></p></td>
   </tr>
   </table>
-  <p>I am an educational researcher with the Online Learning Stratefy at <a href="http://utoronto.ca">the University of Toronto</a>. My research interests include technology enhanced learning environments, technology supported collaborative learning, and curriculum design.</p>
+  <p>I am an educational researcher at <a href="http://utoronto.ca">the University of Toronto</a>. My research interests include technology enhanced learning environments, technology supported collaborative learning, and curriculum design.</p>
   <hr size="3" noshade>
   <h3>Publications</h3>
   <ul>
@@ -32,39 +32,22 @@
     </thead>
     <tbody>
       <tr>
-        <td>2010-2012</td>
-        <td>lalalal</td>
+        <td>2013-current</td>
+        <td>Online Learning Strategies, University of Toronto</td>
       </tr>
       <tr>
-        <td>2008-2010</td>
-        <td>lalalali</td>
+        <td>2006-2012</td>
+        <td>Ontario Institute for Studies in Educaiton, University of Toronto</td>
+      </tr>
+      <tr>
+        <td>2004-2006</td>
+        <td>University of British Columbia</td>
       </tr>
     </tbody>
     <tfoot>
     </tfoot>
   </table>
   <hr>
-  <h3>Skills</h3>
-  <table cellspacing="10">
-    <tr>
-      <td>Research design</td>
-      <td>⭐⭐⭐⭐⭐</td>
-      <td>Literature review</td>
-      <td>⭐⭐⭐⭐⭐</td>
-    </tr>
-    <tr>
-      <td>qual analysis</td>
-      <td>⭐⭐⭐⭐⭐</td>
-      <td>NVIvo</td>
-      <td>⭐⭐⭐⭐⭐</td>
-    </tr>
-    <tr>
-      <td>quan analysis</td>
-      <td>⭐⭐⭐⭐</td>
-      <td>Spss</td>
-      <td>⭐⭐⭐⭐</td>
-    </tr>
-  </table>
   <hr>
   <a href="research.html">Research Projetcs</a>
   <br>
